--- a/vessels_visualization.ipynb
+++ b/vessels_visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "e32a0703",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "1f71f427",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "9b72adef",
    "metadata": {},
    "outputs": [
@@ -351,7 +351,7 @@
        "9                A  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "191afd4b",
    "metadata": {},
    "outputs": [
@@ -653,7 +653,7 @@
        "9                A  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "bc056103",
    "metadata": {},
    "outputs": [
@@ -749,33 +749,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7206abf8",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'Python 3.13.7' requires the ipykernel package.\n",
-      "\u001b[1;31m<a href='command:jupyter.createPythonEnvAndSelectController'>Create a Python Environment</a> with the required packages.\n",
-      "\u001b[1;31mOr install 'ipykernel' using the command: 'c:/Users/amans/AppData/Local/Programs/Python/Python313/python.exe -m pip install ipykernel -U --user --force-reinstall'"
-     ]
-    }
-   ],
-   "source": [
-    "from src.training_pipeline import TrainingPipeline\n",
-    "\n",
-    "# Initialize pipeline\n",
-    "pipeline = TrainingPipeline(output_dir=\"models\")\n",
-    "\n",
-    "# Run complete pipeline\n",
-    "metrics = pipeline.run_full_pipeline(AIS_2020_01_03)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "a75fc516",
    "metadata": {},
    "outputs": [],
@@ -784,7 +757,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "torch_gpu",
    "language": "python",
    "name": "python3"
   },
@@ -798,7 +771,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
